welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:40: error: not found: value levebrosse
		levebrosse() // carré bleu fait
                ^